# nostr-notification-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: default.toml
nostr-social-graph/: Cargo.toml
nostr-social-graph/src/: crawler.rs  error.rs  lib.rs  profiles.rs  social_graph.rs  unique_ids.rs
nostr-social-graph/tests/: social_graph_test.rs
src/: auth.rs  config.rs  db.rs  errors.rs  external_social_graph.rs  filter.rs  http_server.rs  lib.rs  main.rs  mobile_push.rs  nostr_client.rs  notifications.rs  subscription.rs  vapid.rs  web_push.rs
src/schema/: mod.rs  subscription.fbs  subscription_generated.rs
tests/: common.rs  integration_test.rs  performance_test.rs
